<resources>
    <string name="app_name">LookLikeGoddess</string>
    <string name="title_activity_signin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="userProfile">Profile</string>
    <string name="preWorkout">Pre-workout</string>
    <string name="workout">Workout</string>
    <string name="stretch">Stretch</string>
    <string name="mealPlan">Meal Plan</string>
    <string name="tipOfDay">Tip of day</string>


    <!--<string-array name="tips">-->
    <!--<item>Exercise Daily</item>-->
    <!--<item>Eat the Right Foods and Portion Each Meal</item>-->
    <!--<item>Keep Track of Calories and Food Intake Per Day</item>-->
    <!--<item>Be Sure to Get Sleep</item>-->
    <!--<item>Make the world your gym. Do stretches in the grocery line. Do ballet moves while pumping gas. Take the stairs. Sitting in traffic? Squeeze your lower abs, then release.</item>-->
    <!--<item>Pump yourself up. Positive self-talk can boost your motivation. Look in the mirror and observe how strong your muscles are. Applaud yourself for getting fit. Recognize the goals you've met.</item>-->
    <!--<item>Break up your workouts. If you dread a long workout, break it into small chunks. Stretch for 10 minutes before your morning shower. Take a brisk, 20-minute walk at lunch. Lift weights while you wait for your pasta water to boil.</item>-->
    <!--<item>Say no to sports drinks. Unless you're a pro athlete, they're not necessary</item>-->
    <!--<item>Challenge yourself. Step it up. Work out 5 minutes longer. Raise the incline level on your treadmill. Go for a few extra repetitions. It makes a difference.</item>-->
    <!--<item>Stretch. It makes you more flexible, relieves muscle tension, and improves posture. It also helps you tune in to your body. No time? No problem. Stretch while watching TV or lying in bed.</item>-->
    <!--<item>Ноябрь</item>-->
    <!--<item>Декабрь</item>-->
    <!--</string-array>-->

    <string name="mealPlanText">
<![CDATA[ Monday
Breakfast
3 Scrambled Eggs
1 large grapefruit
Snack
25 almonds
Lunch
Turkey Wrap
1 apple
Snack
1 piece of string cheese
Dinner
Spicy Chicken and Pasta
Side salad and 2 Tbsp olive oil/vinegar dressing

Tuesday
Breakfast
2 Tbsp of peanut butter with 1 piece of toast
1 banana
Snack
2 small boxes of raisins
Lunch
Leftover Spicy Chicken and Pasta
Snack
0% fat Greek yogurt
Dinner
Miso Salmon
2 cups of broccoli

Wednesday
Breakfast
Lean Eggs and Ham
1 large grapefruit
Snack
25 almonds
Lunch
Black Bean and Cheese Burrito
1 apple
Snack
1 piece of string cheese
Dinner
Veggie Burger and bun
Salad with 4 Tbsp olive oil/vinegar dressing
1 serving of sweet potato fries

Thursday
Breakfast
Berry Wafflewich
0% fat Greek yogurt
Snack
15 snap peas
2 Tbsp of hummus
Lunch
Gobbleguac Sandwich
1 apple
Snack
1 banana
1 piece of string cheese
Dinner
Steamed Snapper with Pesto
1 cup of brown rice
2 cups of broccoli

Friday
Breakfast
0% fat Greek yogurt
1 large grapefruit
Snack
1 Luna Bar
Lunch
The I-Am-Not-Eating-Salad Salad
25 almonds
Snack
30 baby carrots
4 Tbsp of hummus
Dinner
Chicken Spinach Parm
1 cup of brown rice
2 cups of snow peas

Saturday
Breakfast
Loaded Vegetable Omelet
1 banana
Snack
1 piece of string cheese
Lunch
Turkey Wrap
1 apple
Snack
10 cherry tomatoes
2 Tbsp of hummus
Dinner
Quick Lemon Chicken with Rice
2 cups of broccoli
Snack
1 Sugar-Free Fudgsicle

Sunday
Breakfast
Loaded Vegetable Omelet
1 banana
Snack
15 baby carrots
2 Tbsp of hummus
Lunch
Eat Out
Snack
0% fat Greek yogurt
Dinner
Penne with Chicken Marengo
2 cups of broccoli  ]]>
</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
